src/snapshots/geometrid__polyomino__tests__5 pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": 0,
    "y": 1
  },
  {
    "x": 2,
    "y": 1
  },
  {
    "x": 2,
    "y": 0
  },
  {
    "x": 4,
    "y": 0
  },
  {
    "x": 4,
    "y": 1
  },
  {
    "x": 3,
    "y": 1
  },
  {
    "x": 3,
    "y": 2
  },
  {
    "x": 0,
    "y": 2
  }
]
