src/snapshots/geometrid__polyomino__tests__5 pentomino rectangles.snap
---
source: src/polyomino.rs
expression: rectangles
---
[
  {
    "north_west": {
      "x": 2,
      "y": 0
    },
    "width": 2,
    "height": 1
  },
  {
    "north_west": {
      "x": 0,
      "y": 1
    },
    "width": 3,
    "height": 1
  }
]
