src/snapshots/geometrid__polyomino__tests__Domino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": 0,
    "y": 0
  },
  {
    "x": 2,
    "y": 0
  },
  {
    "x": 2,
    "y": 1
  },
  {
    "x": 0,
    "y": 1
  }
]
