src/snapshots/geometrid__polyomino__tests__I pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": 0,
    "y": 0
  },
  {
    "x": 1,
    "y": 0
  },
  {
    "x": 1,
    "y": 5
  },
  {
    "x": 0,
    "y": 5
  }
]
