src/snapshots/geometrid__polyomino__tests__I pentomino rectangles.snap
---
source: src/polyomino.rs
expression: rectangles
---
[
  {
    "north_west": {
      "x": 0,
      "y": 0
    },
    "width": 5,
    "height": 1
  }
]
