src/snapshots/geometrid__polyomino__tests__J pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": 0,
    "y": 0
  },
  {
    "x": 1,
    "y": 0
  },
  {
    "x": 1,
    "y": 1
  },
  {
    "x": 4,
    "y": 1
  },
  {
    "x": 4,
    "y": 2
  },
  {
    "x": 0,
    "y": 2
  }
]
